--- a/client/src/scss/product.scss
+++ b/client/src/scss/product.scss
@@ -49,6 +49,10 @@
                 list-style: none;
             }
         }
+        .goToBag {
+            @include WL(max, 30%, auto);
+            @include A(yellow, heavy-grey, yellow);
+        }
     }
 }
 
@@ -70,6 +74,9 @@
                 @include WL(max, 60%, auto);
                 @include display-flex(row, center, center);
                 margin: 1rem auto;
+            }
+            .goToBag {
+                margin: 0 auto;
             }
         }
     }
@@ -94,6 +101,9 @@
                 @include WL(max, 90%, auto);
                 @include display-flex(row, center, center);
                 margin: 1rem auto;
+            }
+            .goToBag {
+                margin: 0 auto;
             }
         }
     }
