--- a/client/src/scss/product.scss
+++ b/client/src/scss/product.scss
@@ -1,10 +1,16 @@
 @import 'variables';
 @import 'mixins';
 
+.spinner {
+    @include WL(max, 70%);
+    @include display-flex(row, space-around, center);
+    min-height: 55vh;
+}
+
 .productContainer {
     @include WL(max, 70%);
     @include display-flex(row, space-around, center);
-    min-height: 50vh;
+    min-height: 55vh;
     margin: 0 auto;
 
     .imgContainer {
@@ -86,7 +92,7 @@
     .productContainer {
         @include display-flex(column, space-around, center);
         @include WL(max, 100%);
-        min-height: 65vh;
+        min-height: 70vh;
 
         .imgContainer {
             img {
