--- a/client/src/scss/products.scss
+++ b/client/src/scss/products.scss
@@ -3,12 +3,17 @@
 
 .products-container {
     @include WL(max, 70%);
-    min-height: 50vh;
+    min-height: 55vh;
     margin: 0 auto;
     display: grid;
     place-items: center;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
+
+    .spinner {
+        grid-column: 1 / span 3;
+        grid-row: 1 / 3;
+    }
 
     a {
         text-decoration: none;
@@ -94,9 +99,13 @@
 @include response(l) {
     .products-container {
         @include WL(max, 80%);
-        min-height: 50vh;
+        min-height: 55vh;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(3, 1fr);
+
+        .spinner {
+            grid-column: 1 / span 2;
+        }
 
         .no-item {
             grid-column: 1 / span 2;
@@ -108,7 +117,7 @@
 @include response(m) {
     .products-container {
         @include WL(max, 100%);
-        min-height: 65vh;
+        min-height: 70vh;
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(6, 1fr);
 
