--- a/client/src/scss/categoriesBanner.scss
+++ b/client/src/scss/categoriesBanner.scss
@@ -7,12 +7,24 @@
     background-color: color(white);
 
     h2 {
+        position: relative;
+        display: inline-block;
         height: 100px;
         line-height: 100px;
         font: {
             size: size(l);
             weight: weight(bold);
         }
+    }
+
+    h2:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 25px;
+        background-color: #000;
+        height: 3%;
+        width: 100%;
     }
 }
 
