--- a/client/src/scss/merchandise.scss
+++ b/client/src/scss/merchandise.scss
@@ -6,12 +6,24 @@
     margin: 50px auto 20px;
 
     h2 {
+        position: relative;
+        display: inline-block;
         height: 100px;
         line-height: 100px;
         font: {
             size: size(l);
             weight: weight(bold);
         }
+    }
+
+    h2:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 25px;
+        background-color: #000;
+        height: 3%;
+        width: 100%;
     }
 }
 
@@ -50,6 +62,8 @@
                 box-sizing: border-box;
                 transform: translateY(0);
                 transition: 0.5s ease-out;
+                box-shadow: 0 1px 3px 0px color(transparent-grey);
+
                 cursor: pointer;
 
                 &:hover {
