--- a/client/src/scss/_mixins.scss
+++ b/client/src/scss/_mixins.scss
@@ -56,3 +56,25 @@
         border-bottom: 1px solid color($bottomColor);
     }
 }
+
+@mixin button {
+    background-color: transparent;
+    border: 1px solid color(lighter-grey);
+    border-radius: 20px;
+    font-size: size(s);
+
+    color: color(heavy-grey);
+    margin: 10px 0;
+    padding: 6px 12px;
+    outline: none;
+    transition: 0.7s;
+
+    &:hover {
+        border: 1px solid color(heavy-grey);
+        color: color(yellow);
+    }
+
+    &:focus {
+        outline: 0;
+    }
+}
