--- a/client/src/scss/products.scss
+++ b/client/src/scss/products.scss
@@ -75,25 +75,7 @@
 }
 
 .button {
-    background-color: transparent;
-    border: 1px solid color(lighter-grey);
-    border-radius: 20px;
-    font-size: size(s);
-
-    color: color(heavy-grey);
-    margin: 20px 0;
-    padding: 6px 12px;
-    outline: none;
-    transition: 0.7s;
-
-    &:hover {
-        border: 1px solid color(heavy-grey);
-        color: color(yellow);
-    }
-
-    &:focus {
-        outline: 0;
-    }
+    @include button;
 }
 
 @include response(l) {
