--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -2,11 +2,12 @@ $color: (
     white: #fff,
     black: black,
     heavy-grey: #2a2c30,
-    light-grey: #5b5e64,
-    lighter-grey: rgb(240, 241, 241),
+    light-grey: #6e6e6e,
+    lighter-grey: rgb(221, 224, 224),
     fade-white: rgba(255, 255, 255, 0.85),
     transparent-grey: #2a2c305d,
     yellow: #ccc012,
+    red: rgba(211, 25, 71, 0.952),
 );
 
 @function color($color-name) {
