--- a/client/src/scss/shoppingBag.scss
+++ b/client/src/scss/shoppingBag.scss
@@ -15,7 +15,7 @@
         border-bottom: 1px solid color(lighter-grey);
 
         h4 {
-            color: color(yellow);
+            color: color(heavy-grey);
             font-weight: weight(bold);
         }
         span {
