--- a/client/src/scss/merchandise.scss
+++ b/client/src/scss/merchandise.scss
@@ -21,7 +21,7 @@
         position: absolute;
         left: 0;
         bottom: 25px;
-        background-color: #000;
+        background-color: color(yellow);
         height: 3%;
         width: 100%;
     }
