--- a/client/src/scss/_mixins.scss
+++ b/client/src/scss/_mixins.scss
@@ -25,7 +25,7 @@
 @mixin dropdown-hover {
     opacity: 1;
     transform: translateY(0%);
-    transition: 0.7s 0.8s;
+    transition: 0.7s;
     pointer-events: auto;
 }
 
@@ -62,10 +62,9 @@
     border: 1px solid color(lighter-grey);
     border-radius: 20px;
     font-size: size(s);
-
     color: color(heavy-grey);
     margin: 10px 0;
-    padding: 6px 12px;
+    padding: 6px 15px;
     outline: none;
     transition: 0.7s;
 
