--- a/client/src/scss/auth.scss
+++ b/client/src/scss/auth.scss
@@ -7,13 +7,15 @@
     margin: 0 auto;
 
     form {
-        @include WL(max, 35%, 45vh);
+        @include WL(max, 40%, 50vh);
         @include display-flex(column, center, center);
         margin: 2em auto;
         position: relative;
+        padding: 1rem;
+        background-color: #fff;
 
         .inputBody {
-            @include WL(max, 100%, 100%);
+            @include WL(max, 90%, 100%);
             position: relative;
 
             & input {
