--- a/client/src/scss/navigation.scss
+++ b/client/src/scss/navigation.scss
@@ -75,7 +75,7 @@
     margin-top: 30px;
     padding: 8px;
     opacity: 0;
-    transition: 0.4s 0.4s;
+    transition: 0.4s;
     z-index: z(b);
     pointer-events: none;
 
