--- a/client/src/scss/categoriesBanner.scss
+++ b/client/src/scss/categoriesBanner.scss
@@ -102,3 +102,14 @@
         }
     }
 }
+
+@include response(s) {
+    .categories {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+
+        .category {
+            @include WL(max, 100%);
+        }
+    }
+}
