--- a/client/src/scss/navigation.scss
+++ b/client/src/scss/navigation.scss
@@ -4,7 +4,7 @@
 .navBar {
     @include display-flex(column, center, center);
     @include position(sticky, 0, 0);
-    @include WL(none, 100vw, 20vh);
+    @include WL(none, 100vw, auto);
     padding-bottom: 20px;
     background-color: color(white);
     z-index: z(d);
@@ -101,7 +101,17 @@
     display: none;
 }
 
-@include response(m) {
+@include response(l) {
+    .navBar {
+        @include WL(none, 100vw, auto);
+    }
+}
+@include response(s) {
+    .navBar {
+        @include WL(none, 100vw, auto);
+    }
+}
+@include response(s) {
     .navBar {
         height: 50px;
 
