--- a/client/src/scss/products.scss
+++ b/client/src/scss/products.scss
@@ -80,8 +80,7 @@
 
 @include response(l) {
     .products-container {
-        @include WL(max, 80%);
-        min-height: 55vh;
+        @include WL(max, 80%, auto);
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(3, 1fr);
 
@@ -98,8 +97,20 @@
 
 @include response(m) {
     .products-container {
-        @include WL(max, 100%);
-        min-height: 70vh;
+        @include WL(max, 80%, auto);
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+
+        .single-item {
+            @include WL(max, 100%);
+        }
+    }
+}
+
+@include response(s) {
+    .products-container {
+        @include WL(max, 100%, auto);
+        // min-height: 70vh;
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(6, 1fr);
 
