--- a/client/src/scss/navigation.scss
+++ b/client/src/scss/navigation.scss
@@ -25,26 +25,28 @@
             }
         }
     }
-
-    .shoppingBag {
-        @include position(fixed, 10, none, 150);
-        @include A(yellow, light-grey, yellow);
-        font: {
-            size: size(xs);
-            weight: weight(normal);
+    .link-group {
+        @include position(fixed, 10, none, 20);
+        @include display-flex(row, space-around, center);
+        @include WL(min, 20%);
+        .shoppingBag {
+            @include A(yellow, light-grey, yellow);
+            font: {
+                size: size(xs);
+                weight: weight(normal);
+            }
+            width: auto;
         }
-        width: auto;
-    }
 
-    .login,
-    .logout {
-        @include position(fixed, 10, none, 30);
-        @include A(yellow, light-grey, yellow);
-        font: {
-            size: size(xs);
-            weight: weight(normal);
+        .login,
+        .logout {
+            @include A(yellow, light-grey, yellow);
+            font: {
+                size: size(xs);
+                weight: weight(normal);
+            }
+            max-width: auto;
         }
-        max-width: auto;
     }
 
     .navItems {
@@ -125,8 +127,7 @@
         }
 
         .shoppingBag {
-            position: absolute;
-            right: 5%;
+            @include position(fixed, 10, none, 20);
         }
     }
 
@@ -145,14 +146,14 @@
 
     .sideDrawer {
         @include position(fixed, 0, 0, none);
-        @include WL(min, 70%, 100%);
+        @include WL(min, 80%, 100%);
         transform: translateX(-100%);
         display: block;
         background-color: color(white);
         padding: 32px 16px;
         box-sizing: border-box;
         z-index: z(h);
-        transition: transform 0.4s cubic-bezier(0.9, 0.1, 0.94, -0.07) 0.2s;
+        transition: transform 0.4s cubic-bezier(1, 0.1, 0.8, -0.1) 0.1s;
 
         .logo-Side-Drawer {
             text-align: left;
@@ -183,12 +184,11 @@
             }
         }
 
-        .login-Side-Drawer {
+        .login-Side-Drawer,
+        .logout-Side-Drawer {
             margin-top: 30px;
             text-align: left;
-            & .navItem {
-                background-color: transparent;
-            }
+            @include A(yellow, light-grey, yellow);
         }
     }
 
