start building user profile 30

--- a/client/src/scss/auth.scss
+++ b/client/src/scss/auth.scss
@@ -39,7 +39,7 @@
 
                 & .errorMSG {
                     float: right;
-                    color: color(red);
+                    color: color(heavy-grey);
                     font-size: size(xs);
                 }
             }
