--- a/client/src/scss/products.scss
+++ b/client/src/scss/products.scss
@@ -67,10 +67,16 @@
 
 .no-item {
     grid-column: 1 / span 3;
-    grid-row: 1 / 3;
-    font: {
-        size: size(l);
-        weight: weight(bold);
+    grid-row: 1 / 2;
+    h4 {
+        font: {
+            // size: size(l);
+            weight: weight(bold);
+        }
+    }
+
+    span {
+        color: color(light-grey);
     }
 }
 
