--- a/client/src/scss/user.scss
+++ b/client/src/scss/user.scss
@@ -5,7 +5,7 @@
     @include WL(max, 70%);
     @include display-flex(row, space-around, flex-start);
     min-height: 70vh;
-    // border: 1px solid #000;
+    border: 1px solid color(lighter-grey);
     padding: 2em;
     border-radius: 5px;
     margin: 2em auto;
@@ -15,13 +15,13 @@
         flex-basis: 30%;
         min-height: 40vh;
         border-radius: 5px;
-        border: 1px solid color(light-grey);
+        border: 1px solid color(lighter-grey);
     }
 
     .userProfile {
         flex-basis: 60%;
         min-height: 65vh;
         border-radius: 5px;
-        border: 1px solid color(light-grey);
+        border: 1px solid color(lighter-grey);
     }
 }
