--- a/client/src/scss/user.scss
+++ b/client/src/scss/user.scss
@@ -10,17 +10,17 @@
     border-radius: 5px;
     margin: 2em auto;
 
-    .userCard {
-        @include display-flex(column, space-around, flex-start);
-        flex-basis: 30%;
-        min-height: 40vh;
+    .userDetail {
+        flex-basis: 60%;
+        min-height: 65vh;
         border-radius: 5px;
         border: 1px solid color(lighter-grey);
     }
 
     .userProfile {
-        flex-basis: 60%;
-        min-height: 65vh;
+        @include display-flex(column, space-around, flex-start);
+        flex-basis: 30%;
+        min-height: 40vh;
         border-radius: 5px;
         border: 1px solid color(lighter-grey);
     }
