--- a/client/src/scss/products.scss
+++ b/client/src/scss/products.scss
@@ -35,12 +35,22 @@
 
         span {
             margin-top: 0.8rem;
+            visibility: hidden;
+            opacity: 0;
         }
 
         span:first-of-type {
+            transition: 0.2s;
+
+            transform: translateY(-50%);
             font: {
                 size: 0.9rem;
             }
+        }
+        span:nth-of-type(2) {
+            transition: 0.5s;
+            transform: translateY(50%);
+            color: color(yellow);
         }
 
         #itemImg {
@@ -61,6 +71,23 @@
         &:hover #itemImg::before {
             opacity: 1;
             visibility: visible;
+        }
+
+        &:hover {
+            span {
+                visibility: visible;
+                opacity: 1;
+            }
+
+            span:first-of-type {
+                transform: translateY(0%);
+                font: {
+                    size: 0.9rem;
+                }
+            }
+            span:nth-of-type(2) {
+                transform: translateY(0%);
+            }
         }
     }
 }
