--- a/client/src/scss/auth.scss
+++ b/client/src/scss/auth.scss
@@ -3,8 +3,12 @@
 
 .auth {
     @include WL(max, 90%);
-    min-height: 55vh;
+    min-height: 60vh;
     margin: 0 auto;
+
+    .spinner {
+        @include spinner;
+    }
 
     form {
         @include WL(max, 40%, auto);
