--- a/client/src/scss/userProfile.scss
+++ b/client/src/scss/userProfile.scss
@@ -87,8 +87,46 @@
                 color: color(red);
             }
         }
+
+        .avatarUpload {
+            @include WL(max, 100%, 100px);
+            position: relative;
+
+            & .label {
+                @include WL(max, 100px, 100px);
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: z(i);
+                transition: 0.4s ease-in;
+
+                &:hover {
+                    cursor: pointer;
+                    background-color: color(fade-white);
+                }
+            }
+
+            & input {
+                @include WL(max, 1px, 1px);
+                opacity: 0;
+                position: absolute;
+                top: 0;
+                left: 0;
+                overflow: hidden;
+                clip: rect(0, 0, 0, 0);
+                white-space: nowrap;
+                border: none;
+            }
+
+            & img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                @include WL(max, 100px, 100px);
+                object-fit: cover;
+            }
+        }
     }
-    // }
 
     .userProfileCard {
         @include display-flex(column, space-around, flex-start);
@@ -96,5 +134,28 @@
         min-height: 40vh;
         border-radius: 5px;
         border: 1px solid color(lighter-grey);
+
+        figure {
+            @include WL(max, 100%, 200px);
+            clip-path: circle();
+            margin: 1rem 0;
+            img {
+                @include WL(max, 300px, 200px);
+                object-fit: cover;
+            }
+        }
+        .userName {
+            width: 100%;
+            border-bottom: 1px solid color(lighter-grey);
+            h3 {
+                text-align: center;
+            }
+        }
+        .link {
+            height: 150px;
+            @include display-flex(column, center, flex-start);
+            @include WL(max, 100%, auto);
+            padding: 1rem;
+        }
     }
 }
