shopping bag rwd

--- a/client/src/scss/navigation.scss
+++ b/client/src/scss/navigation.scss
@@ -196,6 +196,7 @@
         min-width: 200px;
         margin: 0 auto;
         background-color: transparent;
+        border-bottom: none;
         text-align: left;
         display: none;
         z-index: z(i);
