--- a/client/src/scss/navigation.scss
+++ b/client/src/scss/navigation.scss
@@ -35,7 +35,7 @@
         .login,
         .logout,
         .user {
-            @include A(yellow, light-grey, yellow);
+            @include A(yellow, light-yellow, none);
             margin: 0 0.7rem;
             font: {
                 size: size(xs);
@@ -80,7 +80,7 @@
     pointer-events: none;
 
     .dropDownItem {
-        @include A(heavy-grey, light-grey, yellow);
+        @include A(lighter-grey, heavy-grey, yellow);
         list-style: none;
         padding: 14px;
         font-size: size(xs);
@@ -187,7 +187,7 @@
         .logout-Side-Drawer {
             margin-top: 30px;
             text-align: left;
-            @include A(yellow, light-grey, yellow);
+            @include A(lighter-grey, heavy-grey, yellow);
         }
     }
 
